--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vuepro</title>
-  </head>
-  <body>
-    <div id="app">
-    </div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <script src='//cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js'></script>
+  <script src='//cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
+  <style>
+    .dg{
+      display: none !important;
+    }
+  </style>
+  <title>vuepro</title>
+</head>
+
+<body>
+  <div id="app">
+  </div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
