--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <script src='//cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js'></script>
   <script src='//cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
+  <!-- <script src='../static/gesture.js'></script> -->
   <style>
     .dg{
       display: none !important;
